// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListViewItem should render component 1`] = `
<Column
  className="list-view-item-container"
  elementType="div"
  largeSize={6}
  scale="large"
  smallSize={12}
  style={Object {}}
>
  <Link
    replace={false}
    title="Foo"
    to="/foo"
  >
    <div
      className="list-view-item"
    >
      <div
        className="list-view-item-title"
      >
        Foo
      </div>
      <div
        className="list-view-item-tags"
      >
        <ul>
          <li>
            <small>
              Foo
            </small>
          </li>
          <li>
            <small>
              Bar
            </small>
          </li>
          <li>
            <small>
              Baz
            </small>
          </li>
        </ul>
        <span>
          <small>
             — 
            2017
          </small>
        </span>
      </div>
      <div
        className="list-view-item-preview"
      >
        <div
          className="list-view-item-preview-image"
        />
      </div>
    </div>
  </Link>
</Column>
`;

exports[`ListViewItem should render component with is-coming-soon classname 1`] = `
<Column
  className="list-view-item-container"
  elementType="div"
  largeSize={6}
  scale="large"
  smallSize={12}
  style={Object {}}
>
  <div
    className="list-view-item is-coming-soon"
  >
    <div
      className="list-view-item-title is-coming-soon"
    >
      Foo
    </div>
    <div
      className="list-view-item-tags"
    >
      <ul>
        <li>
          <small>
            Foo
          </small>
        </li>
        <li>
          <small>
            Bar
          </small>
        </li>
        <li>
          <small>
            Baz
          </small>
        </li>
      </ul>
      <span>
        <small>
           — 
          2017
        </small>
      </span>
    </div>
    <div
      className="list-view-item-preview"
    >
      <div
        className="list-view-item-preview-image"
      />
    </div>
  </div>
</Column>
`;

exports[`ListViewItem should render component with is-new classname 1`] = `
<Column
  className="list-view-item-container"
  elementType="div"
  largeSize={6}
  scale="large"
  smallSize={12}
  style={Object {}}
>
  <Link
    replace={false}
    title="Foo"
    to="/foo"
  >
    <div
      className="list-view-item"
    >
      <div
        className="list-view-item-title is-new"
      >
        Foo
      </div>
      <div
        className="list-view-item-tags"
      >
        <ul>
          <li>
            <small>
              Foo
            </small>
          </li>
          <li>
            <small>
              Bar
            </small>
          </li>
          <li>
            <small>
              Baz
            </small>
          </li>
        </ul>
        <span>
          <small>
             — 
            2017
          </small>
        </span>
      </div>
      <div
        className="list-view-item-preview"
      >
        <div
          className="list-view-item-preview-image"
        />
      </div>
    </div>
  </Link>
</Column>
`;
